--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -42,6 +42,12 @@
 		</div>
 	</div>
 
+	<div class="group optsCloseAll">
+		<div class="menuOption" id="closeAllDiscarded">
+			<i class="fa fa-trash"></i> <span class="optionText">Close all discarded tabs</span>
+		</div>
+	</div>
+
 	<div class="group optsSettings">
 		<div class="menuOption" id="settingsLink">
 			<i class="fa fa-wrench"></i> <span class="optionText">Settings</span>
